Linked image to github repo

--- a/Crystal Spring Discharge.ipynb
+++ b/Crystal Spring Discharge.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "Takes a text file downloaded from NWIS web and parses it out into useable data.\n",
     "<br>\n",
-    "<img src=\"images\\rdb_data_from_nwis.png\" alt=\"Raw RDB data from NWIS\" align=\"left\">"
+    "<img src=\"https://raw.githubusercontent.com/jbellino-usgs/crystal-spring-discharge/master/images/rdb_data_from_nwis.png\" alt=\"Raw RDB data from NWIS\" align=\"left\">"
    ]
   },
   {
